<resources>
    <string name="app_name">Filmoteka</string>
    <string name="popular_people">Popularni ludzie</string>
    <string name="popular_movies">Popularne filmy</string>
    <string name="exit">Wyjdź</string>
    <string name="search">Znajdź</string>
    <string name="favourites">Ulubione</string>
    <string name="add_to_fav">Dodaj do ulubionych</string>
    <string name="remove_from_fav">Usuń z ulubionych</string>
    <string name="best_tv_shows">Najlepsze seriale</string>
    <string name="default_title">{movie_title}</string>
    <string name="default_name">{person_name}</string>
    <string name="default_birthday">2000-01-01</string>
    <string name="default_tv_name">{tvshow_name}</string>
    <string name="default_tv_seasons">{tv_seasons}</string>
    <string name="default_tv_desc">{tv_description}</string>
</resources>
