<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/viewBg"
        tools:context="filmoteka.norles.github.com.filmoteka.MainActivity"
        tools:showIn="@layout/activity_menu">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/menu_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/cardview_light_background">

            <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/popular"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/menu_left_padding"
                    android:textSize="@dimen/menu_text_size"
                    android:text="@string/popular_movies"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/menu_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/cardview_light_background">

            <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/popular_people"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/menu_left_padding"
                    android:textSize="@dimen/menu_text_size"
                    android:text="@string/popular_people"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/menu_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/cardview_light_background">

            <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/ic_search"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/menu_left_padding"
                    android:textSize="@dimen/menu_text_size"
                    android:text="@string/search"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/menu_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/cardview_light_background">

            <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/ic_favourite"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/menu_left_padding"
                    android:textSize="@dimen/menu_text_size"
                    android:text="@string/favourites"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/menu_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/cardview_light_background">

            <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/exit"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/menu_left_padding"
                    android:textSize="@dimen/menu_text_size"
                    android:text="@string/exit"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>